--- a/src/HourlyCard.css
+++ b/src/HourlyCard.css
@@ -2,3 +2,42 @@
     display: flex;
     justify-content: center;
 }
+
+.hourly-card{
+
+    width: 60vw;
+    margin: 1em auto;
+    background-color: lavender;
+}
+
+.btns{
+    display: flex;
+    justify-content: center;
+}
+.hour-btn{
+    width: 100%;
+    padding-top: 1em;
+    background-color: lightcoral;
+}
+
+.hour-img{
+    padding: 0 0.5em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
+
+.hour-text{
+    text-align: center;
+}
+
+.hovered-card{
+    background-color: #E8E9EB;
+    border: 2px #CCCDC6 solid; 
+}
+
+.selected-card{
+    background-color: fuchsia;
+    border-bottom: 5px black, solid;
+}
